--- a/public/partials/about.html
+++ b/public/partials/about.html
@@ -1,5 +1,6 @@
 <div id="about" ng-controller="about">
-<p>TodoGPS is a location-aware todo list that reminds you about something you wanted to do the next time you're at a particular place</p>
-<button class="btn btn-small btn-primary" ng-click="login()">Login</button>
-<button class="btn btn-small btn-primary" ng-click="newUser()">Sign Up</button>
+<p>TodoGPS is a location aware todo list app that reminds you about things you need to do at particular places when it detects you're close to them.</p>
+<button class="btn btn-lg btn-primary" ng-click="login()"><span class="glyphicon glyphicon-user"></span>
+ Login</button>
+<button class="btn btn-lg btn-primary" ng-click="newUser()"><span class="glyphicon glyphicon-user"></span> Sign Up</button>
 </div>
